# RAG-System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  memory.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_rag_document.txt
app/: main.py
app/api/: models.py  router.py
app/api/endpoints/: ingestion.py  search.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/embeddings/: models.py  service.py
app/generation/: context.py  llm.py  prompts.py
app/ingestion/: chunker.py  cleaner.py  loader.py  parser.py
app/pipeline/: rag_pipeline.py
app/reranking/: reranker.py
app/retrieval/: dense.py  filters.py  hybrid.py  sparse.py
app/vectordb/: client.py  collections.py  operations.py
data/qdrant_db/: meta.json
data/qdrant_db/collection/documents/: storage.sqlite
frontend/: analytics.html  chat.html  index.html  search.html  settings.html  upload.html
frontend/assets/css/: main.css  reset.css  variables.css
frontend/assets/css/pages/: analytics.css  chat.css  dashboard.css  search.css  settings.css  upload.css
frontend/assets/js/: api.js  config.js  utils.js
frontend/assets/js/pages/: analytics.js  chat.js  dashboard.js  search.js  settings.js  upload.js
