[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rag-system"
version = "0.1.0"
description = "A production-grade Retrieval-Augmented Generation system built from first principles."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["rag", "retrieval-augmented-generation", "nlp", "llm", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── Ruff Configuration ──────────────────────────────────────────────
# Ruff replaces flake8, black, isort, and pyupgrade in a single tool.
# It's 10-100x faster than the tools it replaces.
[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear (common bugs)
    "SIM",  # simplify
    "TCH",  # type-checking imports
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults (FastAPI uses this)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Pytest Configuration ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Error on unknown markers
    "--tb=short",            # Shorter tracebacks
    "-ra",                   # Show summary of all non-passing tests
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (Qdrant, Ollama)",
]

# ── MyPy Configuration ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "rank_bm25.*",
    "fitz.*",
    "docx.*",
    "ragas.*",
    "loguru.*",
]
ignore_missing_imports = true
